--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Docker volumes
+mysql/data
+phpmyadmin
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
